--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,24 @@ nav li {
   font-weight: 600;
 }
 
+.card {
+  width: 400px;
+  padding: 10px;
+  box-shadow: 0px 2px 3px grey;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  background: #94a7c8;
+  border-radius: 4px;
+}
+
+.ProjectCard h3::after {
+  content: url("https://education-team-2020.s3.eu-west-1.amazonaws.com/web-dev/m3/icon-expand.png");
+  margin-left: 5px;
+}
+
+.EditProjectPage,
+.AddProject,
+.AddTask,
 .SignupPage,
 .LoginPage {
   background: #f9eec3;
@@ -60,6 +78,9 @@ nav li {
   border-radius: 4px;
 }
 
+.EditProjectPage {
+  background-color: rgb(239, 196, 88);
+}
 
 .SignupPage,
 .LoginPage {
@@ -70,9 +91,21 @@ nav li {
   background-color: #94a7c8;
 }
 
+.EditProjectPage form,
+.AddTask form,
+.AddProject form,
 .SignupPage form,
 .LoginPage form {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.AddTask button,
+.AddProject button {
+  display: block;
+}
+
+.TaskCard {
+  background-color: #dfeef9;
 }
